--- a/index.html
+++ b/index.html
@@ -207,30 +207,21 @@
      <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m11!1m3!1d184.09200570506175!2d120.19777649085177!3d22.98827568834361!2m2!1f0!2f8.130563530809873!3m2!1i1024!2i768!4f50.78387988786972!3m3!1m2!1s0x346e767b96d02233%3A0xb38f625c81fbcaa8!2z6Yyi5quDS1RWIOiHuuWNl-ilv-mWgOW6lw!5e1!3m2!1szh-TW!2stw!4v1525074522888" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
 
-    <!-- Footer -->
-    <footer class="footer text-center">
-      <div class="container">
-        <ul class="list-inline mb-5">
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
-              <i class="icon-social-facebook"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white mr-3" href="#">
-              <i class="icon-social-twitter"></i>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a class="social-link rounded-circle text-white" href="#">
-              <i class="icon-social-github"></i>
-            </a>
-          </li>
-        </ul>
-        <p class="text-muted small mb-0">Copyright &copy; Your Website 2017</p>
-      </div>
-    </footer>
+   
 
+<!-- Footer -->
+  <footer class="footer text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-8 offset-sm-2">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeMjTdUWZWpBSWe3Bi4YPix6_jMEqhmgNaZTU9MTNBIzYV-xw/viewform?embedded=true" width="100%" height="1100" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
+      </div>
+    </div>
+
+    <p class="text-muted small mb-0">Copyright &copy; Your Website 2018</p>
+  </div>
+  </footer>
+ 
     <!-- Scroll to Top Button-->
     <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
       <i class="fa fa-angle-up"></i>
